--- a/src/app/passenger-dashboard/components/passenger-form/passenger-form.component.scss
+++ b/src/app/passenger-dashboard/components/passenger-form/passenger-form.component.scss
@@ -10,7 +10,7 @@ input, select {
 
 button {
     cursor: pointer;
-    background: #060ee0;
+    background: #147292;
     margin: 15px 10px 10px 0;
     border: 0;
     border-radius: 2px;
