--- a/src/app/passenger-dashboard/components/passenger-actions/passenger-actions.component.html
+++ b/src/app/passenger-dashboard/components/passenger-actions/passenger-actions.component.html
@@ -1,6 +1,6 @@
 <div class="actions">
-    <button class="all-passengers" (click)="filterPassengers(null)">All</button>
-    <button class="checked-in-passengers" (click)="filterPassengers(true)">Checked In</button>
-    <button class="not-checked-in-passengers" (click)="filterPassengers(false)">Not Checked In</button>
-    <button class="add-new-passenger" (click)="addPassenger()">Add Passenger</button>
+    <button (click)="filterPassengers(null)">All</button>
+    <button (click)="filterPassengers(true)">Checked In</button>
+    <button (click)="filterPassengers(false)">Not Checked In</button>
+    <button (click)="addPassenger()">Add Passenger</button>
 </div>
