--- a/src/app/passenger-dashboard/components/passenger-detail/passenger-detail.component.scss
+++ b/src/app/passenger-dashboard/components/passenger-detail/passenger-detail.component.scss
@@ -12,10 +12,12 @@
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.39);
     transition: 0.3s;
     padding: 2px 16px;
     margin: 25px 0;
+    background-color: #d4d4d4c9;
+    border-radius: 7px;
 }
 
 button {
