--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: unset;
+    padding: 0 50px;
+    letter-spacing: 1.3px;
+}
+
+button {
+    letter-spacing: 1.1px; 
+}
+  
