--- a/src/app/passenger-dashboard/components/passenger-actions/passenger-actions.component.html
+++ b/src/app/passenger-dashboard/components/passenger-actions/passenger-actions.component.html
@@ -1,4 +1,4 @@
-<div class="actions">
+<div>
     <button (click)="filterPassengers(null)">All</button>
     <button (click)="filterPassengers(true)">Checked In</button>
     <button (click)="filterPassengers(false)">Not Checked In</button>
