--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,85 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../styles.scss";
+
 * {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    font: 300 15px/1.4 -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  }
-  
-  html, body {
-    height: 100%;
-    background: #fff;
-    -webkit-font-smoothing: antialiased;
-    color: #545e6f;
-  }
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  font: 300 15px/1.4 -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
-  img {
-    vertical-align: bottom;
-  }
-  img a {
-    border: 0;
-  }
-  ul,
-  ol {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+.nav {
+  height: 66px;
+  border-bottom: 1px solid $white;
+  background-color: $turquoise;
+  padding: 22px;
+
   a {
-    color: #9f72e6;
-    text-decoration: none;
-  }
-  input,
-  button {
-    outline: 0;
-  }
-  input {
-    border: none;
-    background: #fff;
-    font-size: 13px;
-    padding: 6px 30px 6px 10px;
-    border-radius: 1px;
-    box-shadow: 1px 1px 3px 1px #ccc;
-    border: 1px solid #eee;
-  }
-  button {
-    cursor: pointer;
-    background: #9f72e6;
-    border: 0;
-    border-radius: 2px;
-    padding: 5px 10px;
-    text-align: center;
-    color: #fff;
-  }
-  p {
-    margin: 5px 0;
-  }
-  
-  h3 {
-    font-size: 22px;
-    font-weight: 400;
-    margin: 0;
-  }
-  h4 {
-    font-size: 18px;
-    font-weight: 300;
-    margin: 0;
-  }
-
-  .nav {
-    height: 50px;
-    border-bottom: 1px solid #dce5f2;
-    background-color: #147292;
-
-    a {
-      color: white;
-      position: relative;
-      margin: 0 16px;
-      top: 12px;
-      &.active {
-        text-decoration: underline;
-      }
+    color: $white;
+    margin: 0 16px;
+    &.active {
+      text-decoration: underline;
     }
   }
-
-  
+}
