--- a/src/app/passenger-dashboard/components/passenger-detail/passenger-detail.component.html
+++ b/src/app/passenger-dashboard/components/passenger-detail/passenger-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="detail.checkedIn == display || display == null" class="card">
-  <div class="passenger-status">
-    <span class="status" [class.checked-in]="detail.checkedIn"></span>
+  <div class="passenger">
+    <span class="passenger-status" [class.checked-in]="detail.checkedIn"></span>
     <div class="date">
       Check in date: {{ (detail.checkInDate ? (detail.checkInDate | date: 'MMMM d, y') : 'Not checked in') | uppercase }}
     </div>
@@ -14,10 +14,10 @@
       {{ detail.fullname }}
     </div>
   </div>
-  <div class="passenger-children">
+  <div>
     Children: {{ detail.children?.length || 0 }}
   </div>
-  <div class="passenger-detail-actions">
+  <div>
     <button (click)="onSelect()">Select</button>
     <button (click)="toggleEdit()">{{ editing ? 'Done' : 'Edit' }}</button>
     <button (click)="onRemove()">Remove</button>
