--- a/src/app/passenger-dashboard/components/passenger-form/passenger-form.component.scss
+++ b/src/app/passenger-dashboard/components/passenger-form/passenger-form.component.scss
@@ -1,27 +1,23 @@
+@import "../../../../styles.scss";
+
 .form-information {
-    padding: 10px;
+    padding: 10px 0;
 }
 
 input, select {
     border-radius: 3px;
-    border: 1px solid black;
+    border: 1px solid $black;
     padding: 5px;
 }
 
 button {
-    cursor: pointer;
-    background: #147292;
-    margin: 15px 10px 10px 0;
-    border: 0;
-    border-radius: 2px;
+    background: $turquoise;
     padding: 8px 14px;
-    text-align: center;
-    color: #fff;
 }
 
 small {
     font-size: 14px;
-    color: red;
+    color: $error;
     font-weight: bold;
     position: relative;
 }
