--- a/src/app/passenger-dashboard/components/passenger-home/passenger-home.component.html
+++ b/src/app/passenger-dashboard/components/passenger-home/passenger-home.component.html
@@ -7,9 +7,7 @@
         <button (click)="goTotalPassengers()">See our total airline's passengers</button>
     </div>
     </div>
-    <!-- <passenger-footer>
-        <span>aaaaaffff</span>
-    </passenger-footer> -->
-    <!-- <passenger-notfound></passenger-notfound>
-    <passenger-actions></passenger-actions> -->
+    <div class="footer">
+        <p>AirlineApp by CRR257</p>
+    </div>
 </div>
