--- a/src/app/passenger-dashboard/containers/passenger-dashboard/passenger-dashboard.component.html
+++ b/src/app/passenger-dashboard/containers/passenger-dashboard/passenger-dashboard.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="content">
   <passenger-count [items]="passengers"></passenger-count>
   <passenger-actions
     (filter)="handleFilter($event)"
